force-app/main/default/objects/Account/fields/BankAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>BankAccountHolder__c</fullName>
    <description>Full name of the bank account holder</description>
    <label>BankAccountHolder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>val 1</fullName>
            </value>
            <value>
                <fullName>val 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>