force-app/main/default/objects/Account/fields/BankBic__c.field-meta.xml
<CustomField>
    <fullName>BankBic__c</fullName>
    <description>Bank&#39;s Bic number</description>
    <label>BankBic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>