force-app/main/default/objects/Account/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Name of subscriber&#39;s bank</description>
    <label>BankName</label>
    <length>130</length>
    <type>Text</type>
</CustomField>