force-app/main/default/objects/Account/fields/CompanyCommerceRegister__c.field-meta.xml
<CustomField>
    <fullName>CompanyCommerceRegister__c</fullName>
    <description>Company&#39;s chamber of commerce Id (eg:SIREN/SIRET)</description>
    <label>CompanyCommerceRegister</label>
    <length>150</length>
    <type>Text</type>
</CustomField>