force-app/main/default/objects/Account/fields/CompanyVatNum__c.field-meta.xml
<CustomField>
    <fullName>CompanyVatNum__c</fullName>
    <description>Company&#39;s Tax/Vat identification</description>
    <label>CompanyVatNum</label>
    <length>90</length>
    <type>Text</type>
</CustomField>