force-app/main/default/objects/Account/fields/CreditCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckStatus__c</fullName>
    <label>CreditCheckStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post-Paid</fullName>
            </value>
            <value>
                <fullName>Pre-Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>