force-app/main/default/objects/Account/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <externalId>true</externalId>
    <label>CustomerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>