force-app/main/default/objects/Account/fields/Iban__c.field-meta.xml
<CustomField>
    <fullName>Iban__c</fullName>
    <label>Iban</label>
    <length>255</length>
    <type>Text</type>
</CustomField>