force-app/main/default/objects/Account/fields/IsB2B2CActive__c.field-meta.xml
<CustomField>
    <fullName>IsB2B2CActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsB2B2CActive</label>
    <type>Checkbox</type>
</CustomField>