force-app/main/default/objects/Account/fields/IsIndependentProfession__c.field-meta.xml
<CustomField>
    <fullName>IsIndependentProfession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the company a &quot;profession libérale&quot; (no vat number)</description>
    <label>IsIndependentProfession</label>
    <type>Checkbox</type>
</CustomField>