force-app/main/default/objects/Account/fields/IsLargeFleet__c.field-meta.xml
<CustomField>
    <fullName>IsLargeFleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLargeFleet</label>
    <type>Checkbox</type>
</CustomField>