force-app/main/default/objects/Account/fields/ProspectId__c.field-meta.xml
<CustomField>
    <fullName>ProspectId__c</fullName>
    <externalId>true</externalId>
    <label>ProspectId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>